# sigsim

./: Cargo.toml  README.md  native.d.cts  package.json  pnpm-lock.yaml  vitest.config.ts
.github/workflows/: release.yml
__test__/: sigsim.test.ts
__test__/bench/: fingerprint.bench.ts
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64-gnu/: package.json
npm/linux-arm64-musl/: package.json
npm/linux-x64-gnu/: package.json
npm/linux-x64-musl/: package.json
npm/win32-x64-msvc/: package.json
src/: common.rs  lib.rs  search.rs
src/fingerprint/: buffer.rs  file.rs
ts/: errors.ts  index.ts  sigsim.ts  types.ts
