[package]
name = "sigsim"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
memmap2 = "0.9"
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"
rayon = "1"
thiserror = "2"
tlsh2 = { version = "1", features = ["diff"] }
tokio = { version = "1", features = ["rt", "sync"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
opt-level = 3
panic = "abort"
